# testWA

./: .env  pyproject.toml
src/: main.py  settings.py
src/alembic/: env.py
src/api/: api.py
src/api/endpoints/: user.py
src/auth/: auth.py  manager.py
src/base/: __init__.py  base.py  base_repository.py
src/models/: __init__.py  user.py
src/schemas/: user.py
